--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ __pycache__/cred.cpython-310.pyc
 __pycache__/cred.cpython-311.pyc
 __pycache__/userplaylistdata.cpython-311.pyc
 Scripts/cred.py
+Scripts/__pycache__/auth.cpython-311.pyc
+Scripts/__pycache__/cred.cpython-311.pyc
+Scripts/__pycache__/data.cpython-311.pyc
