--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Scripts/cred.py
 Scripts/__pycache__/auth.cpython-311.pyc
 Scripts/__pycache__/cred.cpython-311.pyc
 Scripts/__pycache__/data.cpython-311.pyc
+Scripts/__pycache__/algorithms.cpython-311.pyc
+Scripts/__pycache__/playlist.cpython-311.pyc
