--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ __pycache__/auth.cpython-311.pyc
 __pycache__/cred.cpython-310.pyc
 __pycache__/cred.cpython-311.pyc
 __pycache__/userplaylistdata.cpython-311.pyc
-Scripts/cred.py
 Scripts/__pycache__/auth.cpython-311.pyc
 Scripts/__pycache__/cred.cpython-311.pyc
 Scripts/__pycache__/data.cpython-311.pyc
 Scripts/__pycache__/algorithms.cpython-311.pyc
 Scripts/__pycache__/playlist.cpython-311.pyc
+todos copy.md
